--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
